# cargo-attest

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
src/: hash.rs  main.rs  sources.rs  verdict.rs
src/commands/: hash_cmd.rs  krate.rs  mod.rs  release.rs
tests/: release_real.rs
